src/test/resources/extension/valid/control/ifExpr.wacc
begin

int x = 0;
int y = if x == 1 then 0 else 1 fi;
exit y;

end