src/test/resources/extension/invalid/const/writeConst.wacc
begin

const int x = 0;
x = 1;  # semantic error!

end